Fixing button alignment

--- a/src/app/home/home/home.component.css
+++ b/src/app/home/home/home.component.css
@@ -1,4 +1,4 @@
-.content{
+.content {
   display: flex;
   justify-content: center; /* Center horizontally */
   align-items: center; /* Center vertically */
@@ -9,51 +9,61 @@
   justify-content: center; /* Center horizontally */
   align-items: center; /* Center vertically */
 }
-
+.container2 { 
+  display: flex;
+  flex-direction: column;
+}
 .button {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    margin-left: 1rem;
-    margin-bottom: 1rem;
-  }
+  bottom: 0;
+  left: 0;
+  margin-left: 1rem;
+  margin-bottom: 1rem;
+}
 
-  .button2 {
-    position: fixed;
-    bottom: 0;
-    right: 0;
-    margin-right: 1rem;
-    margin-bottom: 1rem;
+.button2 {
+  bottom: 0;
+  right: 0;
+  margin-right: 1rem;
+  margin-bottom: 1rem;
+}
+
+.button-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 1rem;
+}
+
+.button:hover,
+.button2:hover {
+    background-color: transparent;
+}
+
+#scroll {
+  width: 20vw;
+  display: flex;
+  justify-content: center; /* Center horizontally */
+  align-items: center; /* Center vertically */
+}
+
+img {
+  border-radius: 1px;
+}
+
+.name {
+  margin-left: 1rem;
+  /* color: var(--green-300); */
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-size: 1.6rem;
+  font-weight: bold;
+}
+
+@media (max-width: 768px) {
+  form {
+    width: 90%;
   }
 
   #scroll {
-    width: 20vw;
-    display: flex;
-    justify-content: center; /* Center horizontally */
-    align-items: center; /* Center vertically */
+    width: 10vw;
   }
-  
-
-  img{
-    border-radius: 1px;
-  }
-
-  .name{
-    margin-left: 1rem;
-    /* color: var(--green-300); */
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 1.6rem;
-    font-weight: bold;
-  }
-
-  @media (max-width: 768px){
-  	
-    form { 
-        width: 90%;
-    }
-
-    #scroll {
-      width: 10vw;
-    }
-   
-  }
+}
